--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "repository": "git@github.com:devmode-community/front-end-bootcamp.git",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --out-dir build"
+    "build": "parcel build index.html --out-dir build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
@@ -18,6 +20,13 @@
     "prettier": "^1.14.2",
     "prettierrc": "^0.0.0-5",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
-  }
+    "react-dom": "^16.5.0",
+    "@storybook/react": "^3.4.11",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0"
+  },
+  "dependencies": {}
 }
